[package]
name = "rusty-vim"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
termios = "0.3.3"